# eco-visio-api

./: CNAME  README.md  api-example.R  eco-visio-api.csv  eco-visio-api_2022-06-13.csv  eco-visio-api_2022-06-26.csv  eco-visio-api_2022-10-27.csv  eco-visio-api_collection.csv  eins.json  generator_config.yaml  idPdc_with_publicwebpage.txt  index.html  openapi.yaml  openapi_Eco-Counter_v1.1.yaml  test.sh  zwei.json
python-client/: README.md  pyproject.toml  tox.ini
python-client/.openapi-generator/: FILES
python-client/deutschland/EcoVisio/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/deutschland/EcoVisio/api/: __init__.py  default_api.py
python-client/deutschland/EcoVisio/apis/: __init__.py
python-client/deutschland/EcoVisio/model/: __init__.py  all_counter.py  all_counter_inner.py  all_counter_inner_photo_inner.py  all_counter_inner_pratique_inner.py  date.py
python-client/deutschland/EcoVisio/models/: __init__.py
python-client/docs/: AllCounter.md  AllCounterInner.md  AllCounterInnerPhotoInner.md  AllCounterInnerPratiqueInner.md  Date.md  DefaultApi.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: EcoVisio.api.rst  EcoVisio.apis.rst  EcoVisio.model.rst  EcoVisio.models.rst  EcoVisio.rst  modules.rst
python-client/test/: test_all_counter.py  test_all_counter_inner.py  test_all_counter_inner_photo_inner.py  test_all_counter_inner_pratique_inner.py  test_date.py  test_default_api.py
