[tool]
[tool.poetry]
name = "de-EcoVisio"
version = "0.1.0"
description = "Eco-Counter: Eco-Visio-API"
keywords = ["OpenAPI", "OpenAPI-Generator", "EcoVisio", "App", "API"]
homepage = "https://github.com/bundesAPI/eco-visio-api"
authors = ["BundesAPI <kontakt@bund.dev>"]
packages = [
  { include = "deutschland"}
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
python-dateutil = "*"
urllib3 = ">=1.25.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bundesAPI/eco-visio-api/issues"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

